[setup] Page layout: fix vertical overflow style

--- a/src/components/layouts/Page/styles.module.scss
+++ b/src/components/layouts/Page/styles.module.scss
@@ -23,4 +23,8 @@
 
 .page_content {
   overflow-x: auto;
+
+  // must be set explicitly
+  // because by default it's automatically set to same as overflow-x
+  overflow-y: initial;
 }
